TWC3167-3190 : Overlap Changes - Fix (#1622)

--- a/Intel.MyDeals/Client/src/app/style/style.css
+++ b/Intel.MyDeals/Client/src/app/style/style.css
@@ -1089,6 +1089,7 @@ kendo-textbox.kendoInput.font-input.cd-input-bottom.k-textbox-design.k-textbox.n
 }
 
 kendo-window#OvrLp.k-wind-design {
+    width: 800px !important;
     padding-top: 0 !important;
 }
 
@@ -1419,3 +1420,14 @@ button.contract-correction-upload.k-button.k-button-flat.k-button-flat-base.k-bu
     color: #495057;
     background-color: #fafafa;
 }
+
+#OvrLp1 .k-grid td {
+    padding: 0 !important;
+    font-size: 10px !important
+}
+
+#OvrLp .k-grid td {
+    padding: 0 !important;
+    font-size: 10px !important
+}
+
